<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name" translatable="false">BarkiASL Lite</string>
	<string name="barkiasl" translatable="false">BARKIASL LITE</string>
	<string name="app_url" translatable="false">https://play.google.com/store/apps/details?id=com.mohamed.barki.asl.lite</string>
	<string name="url_asset" translatable="false">https://github.com/mohamedbarkigithub/BarkiASL-Lite/raw/master/assets/</string>
	<string name="privacy_policy" translatable="false">https://mohamedbarki.blogspot.com/2023/07/privacy-policy-of-barkiasl-lite.html</string>
	<string name="pkgadmin" translatable="false">com.mohamed.barki.admin</string>
	<string name="pkgBraille" translatable="false">com.mohamed.barki.xbraille</string>
	<string name="ar_lan" translatable="false">"آابتثجحخدذرزسشصضطظعغقفكلمن هويىأؤئةإﻻء١٢٣٤٥٦٧٨٩٠ "</string>
    <string name="ar_lanf" translatable="false">"abcdefghijklmnopqrstuvwxyzàäâáæèéêùûüîïíìôöóòœ 0123456789 "</string>
    <string name="ar_lane" translatable="false">"abcdefghijklmnopqrstuvwxyz 0123456789 "</string>
    <string name="email_lang" translatable="false">"abcdefghijklmnopqrstuvwxyz @"</string>
	<string name="num_lang" translatable="false">0123456789</string>
	<string name="num_lang_ar" translatable="false">١٢٣٤٥٦٧٨٩٠</string>
    <string name="ar_lang" translatable="false">آابتثجحخدذرزسشصضطظعغقفكلمن هويىأؤئةإﻻء، abc\'defghijklmnopq()/؟?rstuvwxyzàäâáæèéêùûüîïíìôöóòœ, -+1234567890</string>
	<string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
	<string name="search">Enter a search term</string>
	<string name="page_about">Developer Facebook Page:</string>
	<string name="email_about">Developer Email:</string>
	<string name="site_about">To update the application:</string>
    <string name="copy_text_to_clip">Text copied successfully!!!</string>
    <string name="saved_to_folder">Saved to folder</string>
    <string name="oops_screenshot_file">Oops!!  An error occurred while saving your file</string>
	<string name="oops_screenshot">Oops!!  Your phone does not support this feature</string>
	<string name="validate_empty">Please enter a letter or symbol!!!</string>
    <string name="validate_more">Very long sentence!!!!!!</string>
    <string name="validate_more_more">There are more than 10 letter!!!</string>
    <string name="error">Error!!!</string>
	<string name="title_about">This application helps to:</string>
    <string name="text_about">Search in the Algerian Sign Language Dictionary</string>
	<string name="not_connected_to_internet">Not connected to internet!!!</string>
	<string name="not_connected_to_a_network">Not connected to a network!!!</string>
	<string name="welcom">Hello, let\'s start learning</string>
	<string name="welcom_game">Hello, let\'s start playing</string>
	<string name="try_searching_in_arabic">Try searching in Arabic</string>
	<string name="try_searching_in_french">Try searching in French</string>
	<string name="time_20_s">Time is greater than 20s!</string>
	<string name="valid_time_video">Set a valid time between 1s and 20s</string>
	<string name="valid_theme_video">Set a valid video theme</string>
	<string name="video_is_over">The video is over!</string>
	<string name="video_started">The video started…</string>
	<string name="video_is_playing">The video is playing…</string>
	<string name="video_paused">Video paused…</string>
	<string name="time_of_showing_a_photo">Time of showing a photo</string>
	<string name="video_show">Video Show</string>
	<string name="enter_a_search_term">Enter a search term</string>
	<string name="slelected_video_is_being_downloaded">Selected Video is being downloaded</string>
	<string name="downloading_video">Downloading Video</string>
	<string name="no_video_fond">The video was not found!!!</string>
	<string name="contient">It contains :</string>
	<string name="sign">signs.</string>
	<string name="video">videos.</string>
	<string name="image">diagrams.</string>
	<string name="title_ref">Sources and references :</string>
	<string name="text_ref_kamos">Algerian Sign Language Dictionary Edition 2017 (pdf)</string>
	<string name="text_ref_kamos_video">Algerian Sign Language Dictionary Edition 2017 (video)</string>
	<string name="numImage" tools:ignore="MissingTranslation">1008</string>
	<string name="no_connection">No Connection</string>
	<string name="h1">Whoops!</string>
	<string name="h2">Slow or No internet Connection 😿</string>
	<string name="h4">Please Check your WiFi or Mobile Internet!</string>
	<string name="save_video">Download this video</string>
	<string name="save_this_video">Do you want to download this video?</string>
	<string name="save_video_offline">After downloading the video to your device, you will be able to play it later without the Internet</string>
	<string name="worng_package">The package name is wrong !!!</string>
    <string name="worng_name">The app name is wrong !!!</string>
	<string name="worng_time">The application must be updated !!!</string>
	<string name="re_exit">Press again to exit the application</string>
	<string name="back_to_home">Click again to go back to the main page</string>
	<string name="start_game">Game</string>
	<string name="enter_a_repons_term">Enter a possible answer</string>
	<string name="learn">Learn</string>
	<string name="scor">your scor:</string>
	<string name="show_help">Get help with 5 points discount ^^</string>
	<string name="show_repo">Check the answer ^^</string>
	<string name="show_skip">Skip the test ^^</string>
	<string name="more_error">Too many wrong attempts!!!</string>
	<string name="ask_if_you_want_learn">Do you want to go to the learning page before you start playing again???</string>
	<string name="congrulation_0">Congratulations!!!  You have answered</string>
	<string name="congrulation_1">Test without any error!!!  We have added for you</string>
	<string name="congrulation_2">Tests without any error!!!  We have added for you</string>
	<string name="congrulation_3">points</string>
	<string name="congrulation_4">points</string>
	<string name="congrulation_5">point</string>
	<string name="next">Next</string>
	<string name="dont_clear_data">The data of this application cannot be deleted</string>
	<string name="save_app">Update the application</string>
	<string name="save_this_app">Do you want to update this app?</string>
	<string name="save_app_offline">Updating the application helps to improve some features and add some files and features</string>
	<string name="update_this_app">This application must be updated</string>
	<string name="app_crashed">The app has stopped working!!!</string>
	<string name="update_app_offline">The app has stopped working, so it needs to be updated to fix the bug</string>
	<string name="support_send_succes">Report sent successfully!!!</string>
	<string name="support_send_failde">The report could not be sent!!!</string>
	<string name="remove_crash">Delete a report</string>
	<string name="remove_this_crash">Do you really want to delete this report!!!</string>
	<string name="crash_remove_succes">Report deleted successfully!!!</string>
	<string name="crash_remove_failde">The report could not be deleted!!!</string>
	<string name="list_crash">List of bug reports</string>
	<string name="dark_mode">night mode</string>
	<string name="notification">Notices</string>
	<string name="info">Information</string>
	<string name="song">Sounds</string>
	<string name="spinner">View suggestions</string>
	<string name="scrollOfImage">Image and video viewer</string>
	<string name="minus">Zoom out</string>
	<string name="left">Previous signe</string>
	<string name="right">Next signe</string>
	<string name="plus">Zoom in</string>
	<string name="smile">Diagram</string>
	<string name="smile_gone">Hide and display the illustration</string>
	<string name="smile_gone_invisible">Hidden</string>
	<string name="video_or_reload">Indication video or game update</string>
	<string name="close_dialog">Close the dialog</string>
	<string name="ref">Sources and references</string>
	<string name="help">help</string>
	<string name="yes">Yes</string>
	<string name="image_view">Indicative image</string>
	<string name="video_view">Indication video</string>
	<string name="spinner_img">Show signes</string>
	<string name="video_show_btn">Video play</string>
	<string name="search_btn">Search</string>
    <string name="info_dialog">Show information</string>
    <string name="btn_info">Show queries</string>
    <string name="update_app">Update the application</string>
	<string name="start_update">Update</string>
	<string name="success_update" translatable="false">Success update</string>
	<string name="failure_update" translatable="false">Failure update</string>
	<string name="jomhoriya">People\'s Democratic Republic of Algeria</string>
	<string name="wizara">Ministry of National Solidarity, Family Affairs and the Status of Women</string>
    <string name="share">Share the app:</string>
	<string name="sharesubject">Download the BarkiASL application</string>
	<string name="idistagram" translatable="false">http://instagram.com/_u/medbarkinsta</string>
	<string name="idtelegramapp" translatable="false">tg://resolve?domain=barkigram</string>
	<string name="idtelegram" translatable="false">https://t.me/barkigram</string>
	<string name="idtelegramappG" translatable="false">tg://resolve?domain=SpecializedEducationSpaceGroup</string>
	<string name="idtelegramG" translatable="false">https://t.me/SpecializedEducationSpaceGroup</string>
	<string name="idfacebookdevlopperapp" translatable="false">fb://profile/3203834</string>
	<string name="idfacebookdevlopper" translatable="false">https://www.facebook.com/profile.php?id=3203834</string>
	<string name="idfacebookdevlopper2app" translatable="false">fb://profile/1049535328</string>
	<string name="idfacebookdevlopper2" translatable="false">https://www.facebook.com/profile.php?id=1049535328</string>
	<string name="idfacebookpageappbarki" translatable="false">fb://profile/100063588016416</string>
	<string name="idfacebookpagebarki" translatable="false">https://www.facebook.com/100063588016416</string>
	<string name="idfacebookgroupapp" translatable="false">fb://group/279469321639852</string>
	<string name="idfacebookgroup" translatable="false">https://www.facebook.com/groups/specialized.education.space.group</string>
	<string name="pkgapp" translatable="false">com.mohamed.barki.asl</string>
	<string name="pkgfacebook" translatable="false">com.facebook.katana</string>
	<string name="pkgfacebooklite" translatable="false">com.facebook.lite</string>
	<string name="pkginstagram" translatable="false">com.instagram.android</string>
	<string name="pkginstagramlite" translatable="false">com.instagram.lite</string>
	<string name="pkgyoutube" translatable="false">com.google.android.youtube</string>
	<string name="pkgtelegram" translatable="false">org.telegram.messenger</string>
	<string name="pkgtelegramweb" translatable="false">org.telegram.messenger.web</string>
	<string name="logo" translatable="false">logo</string>
	<string name="email_dev" translatable="false">mohamedbarkimaths@gmail.com</string>
	<string name="phone_dev" translatable="false">+213779875388</string>
	<string name="adminchat" translatable="false">ChatAdminActivity</string>
	<string name="adminsupport" translatable="false">SupportViewActivity</string>
	<string name="support_view">Technical Support</string>
	<string name="admininfo">Information of the owner and developer of the application</string>
	<string name="facebookpage">Facebook page</string>
	<string name="facebook">Facebook account</string>
	<string name="facebookk">Second Facebook account</string>
	<string name="insta">Instagram account</string>
	<string name="edit_or_remove_message">Choose the appropriate action</string>
	<string name="remove_message">remove_message</string>
	<string name="cancel" translatable="false" tools:ignore="ButtonCase">cancel</string>
	<string name="copy_message" translatable="false">copy_message</string>
</resources>