<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:fitsSystemWindows="true"
    android:background="@drawable/side_nav_bar"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="10dp"
        android:background="@color/transparent"
        app:srcCompat="@mipmap/roundicon"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1.0"
        android:gravity="center"
        android:contentDescription="@string/app_name"
        android:text="@string/barkiasl"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:lines="2"
        android:background="@color/transparent"
        app:autoSizeTextType="uniform"/>

</LinearLayout>