<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/dialog_lny_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|left">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/dialog_close"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cancel"
                android:src="@drawable/ic_cancel"
                tools:ignore="TouchTargetSizeCheck" />
            <LinearLayout
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf" />
        </LinearLayout>
        <TextView
            android:id="@+id/dialog_info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/dialog_ok"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minWidth="100dp"
            android:layout_marginRight="5.0dip"
            android:layout_weight="0.50"
            android:background="@drawable/button_yes"
            android:visibility="gone"
            android:src="@drawable/popup_edit"
            app:tint="@color/LimeGreen"
            android:contentDescription="@string/edit_or_remove_message"/>

        <ImageButton
            android:id="@+id/dialog_copy"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minWidth="100dp"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_weight="0.50"
            android:background="@drawable/button_yellow"
            android:contentDescription="@string/copy_message"
            android:src="@drawable/popup_copy"
            app:tint="@color/Yellow"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minWidth="100dp"
            android:layout_marginLeft="5.0dip"
            android:layout_weight="0.50"
            android:background="@drawable/button_no"
            android:src="@drawable/popup_remove_off"
            android:visibility="gone"
            android:contentDescription="@string/remove_message"/>
    </LinearLayout>
</LinearLayout>