<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/dialog_lny_info"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="top|left"
		tools:ignore="RtlHardcoded">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center">

			<ImageButton
				android:id="@+id/dialog_close"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_cancel"
				android:contentDescription="@string/close_dialog"
				tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
			<LinearLayout
				android:layout_weight="1.0"
				android:layout_width="0dp"
				android:gravity="right"
				android:layout_height="wrap_content">
			<ImageButton
				android:id="@+id/dialog_ref"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:layout_marginRight="5.0dip"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_ref"
				android:contentDescription="@string/ref"
				tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

			<ImageButton
				android:id="@+id/dialog_help"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:layout_marginLeft="5.0dip"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_help"
				android:contentDescription="@string/help"
				tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
			</LinearLayout>
		</LinearLayout>
		<TextView
			android:id="@+id/dialog_infoo"
			android:padding="10dp"
			android:gravity="left"
			android:textSize="20sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/dialog_lny_Big"
		android:padding="10dp"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1.0"
		android:gravity="top">
		<ScrollView
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
			tools:ignore="UselessParent">
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="top">
				<LinearLayout
					android:id="@+id/dialog_lny"
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="top">
				</LinearLayout>
				<TextView
					android:id="@+id/dialog_info"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textIsSelectable="true"
					android:contentDescription="@string/info_dialog"
					tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
	<TextView
		android:id="@+id/dialog_infox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:minHeight="50dp"
		android:padding="10dp"
		android:textIsSelectable="true"
		android:contentDescription="@string/info_dialog"
		tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
</LinearLayout>

